--- a/12 - Key Sequence Detection/index.html
+++ b/12 - Key Sequence Detection/index.html
@@ -7,6 +7,19 @@
 </head>
 <body>
 <script>
+const pressed = [];
+const secretCode = 'william';
+
+window.addEventListener('keyup', (e) =>{
+
+  pressed.push(e.key);
+  pressed.splice(-secretCode.length -1, pressed.length - secretCode.length);
+
+  if (pressed.join('').includes(secretCode)){
+    console.log('DingDing');
+    cornify_add();
+  }
+})
 </script>
 </body>
 </html>
